--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light">
     <title>Сложно сосредоточиться</title>
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css">
   </head>
   <body class="page">
     <header class="header decorated-zone">
+      <span class="header__rec" aria-hidden="true">REC</span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -34,11 +40,11 @@
           </li>
         </ul>
       </nav>
-      <h1>no focus</h1>
-      <p>Что делать, когда не можешь делать ничего
-        Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+      <h1 class="header__logo">no focus</h1>
+      <div class="header__text">Что делать, когда не можешь делать ничего
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо</div>
     </header>
-    <main>
+    <main class="content">
       <section>
         <h2>Почему сосредоточиться так сложно</h2>
         <h3>Многозадачность</h3>
@@ -80,7 +86,7 @@
     </main>
     <script src="./scripts/script.js"></script>
   </body>
-  <footer>
+  <footer class="footer decorated-zone">
     <h2>focus</h2>
   </footer>
 </html>
