--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" href="./images/favicon.ico" sizes="any">
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="./images/mobile-icon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
@@ -82,11 +85,11 @@
       </section>
       <section>
         <h2>А можно в картинках?</h2>
-        <img src="./images/sunset.png" loading="lazy" class="gallery-grid">
-        <img src="./images/ice-cream.png" loading="lazy" class="gallery-grid">
-        <img src="./images/tape.png" loading="lazy" class="gallery-grid">
-        <img src="./images/books.png" loading="lazy" class="gallery-grid">
-        <img src="./images/street.png" loading="lazy" class="gallery-grid">
+        <img src="./images/sunset.png" loading="lazy" class="gallery-grid" alt="Нарисованный закат в море, на фоне гор">
+        <img src="./images/ice-cream.png" loading="lazy" class="gallery-grid" alt="Нарисованный десерт, с живыми шариками мороженого и тарелкой">
+        <img src="./images/tape.png" loading="lazy" class="gallery-grid" alt="Нарисованная магнитофонная касета в окружении компьютерных элементах">
+        <img src="./images/books.png" loading="lazy" class="gallery-grid" alt="Нарисованная стопка книг с чашкой на вершине">
+        <img src="./images/street.png" loading="lazy" class="gallery-grid" alt="Нарисованная в светло-фиолетовых тонах улица">
       </section>
     </main>
     <script src="./scripts/script.js"></script>
