--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light">
@@ -12,6 +9,7 @@
     <link rel="icon" href="./images/favicon.ico" sizes="any">
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="./images/mobile-icon.png">
+    <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
@@ -53,14 +51,14 @@
       </div>
     </header>
     <main class="content">
-      <section>
+      <section class="section__why">
         <h2 class="content__title">Почему сосредоточиться так сложно</h2>
         <h3 class="content__subtitle">Многозадачность</h3>
         <p>Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
         <h3 class="content__subtitle">Дофамин</h3>
         <p>С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
       </section>
-      <section>
+      <section class="section__what">
         <h2 class="content__title">Что снижает концентрацию внимания?</h2>
         <h3 class="content__subtitle">Многозадачность</h3>
         <p>Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
@@ -69,7 +67,7 @@
         <h3 class="content__subtitle">Гаджеты</h3>
         <p>Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
       </section>
-      <section>
+      <section class="section__how">
         <h2 class="content__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <h3 class="content__subtitle">5 простых (на самом деле не очень) советов</h3>
         <h4 class="content__subtitle-recommendations">Представьте небо и облака</h4>
@@ -83,7 +81,7 @@
         <h4 class="content__subtitle-recommendations">Читайте</h4>
         <p>Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
       </section>
-      <section>
+      <section class="section__gallery">
         <h3 class="content__subtitle">А можно в картинках?</h3>
         <img src="./images/sunset.png" loading="lazy" class="gallery-grid" alt="Нарисованный закат в море, на фоне гор">
         <img src="./images/ice-cream.png" loading="lazy" class="gallery-grid" alt="Нарисованный десерт, с живыми шариками мороженого и тарелкой">
@@ -94,7 +92,7 @@
     </main>
     <script src="./scripts/script.js"></script>
     <footer class="footer decorated-zone">
-      <h2>focus</h2>
+      <h2 class="footer__logo">focus</h2>
     </footer>
   </body>
 </html>
