--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./styles/globals.css">
   </head>
   <body class="page">
-    <header class="header decorated-zone">
+    <header class="header header__decorated-zone">
       <span class="header__rec" aria-hidden="true">REC</span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
@@ -54,7 +54,8 @@
       <section class="section__why">
         <h2 class="content__title">Почему сосредоточиться так сложно</h2>
         <h3 class="content__subtitle">Многозадачность</h3>
-        <p>Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
+        <p>Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="https://dana.org/article/multicosts-of-multitasking/" class="link-decorated"
+          target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
         <h3 class="content__subtitle">Дофамин</h3>
         <p>С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
       </section>
@@ -75,7 +76,8 @@
         <h4 class="content__subtitle-recommendations">Включите музыку</h4>
         <p>Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
         <h4 class="content__subtitle-recommendations">Прогуляйтесь</h4>
-        <p>Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
+        <p>Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" class="link-decorated"
+          target="_blank">показал</a>,, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
         <h4 class="content__subtitle-recommendations">Хорошо ешьте</h4>
         <p>Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
         <h4 class="content__subtitle-recommendations">Читайте</h4>
@@ -83,15 +85,17 @@
       </section>
       <section class="section__gallery">
         <h3 class="content__subtitle">А можно в картинках?</h3>
-        <img src="./images/sunset.png" loading="lazy" class="gallery-grid" alt="Нарисованный закат в море, на фоне гор">
-        <img src="./images/ice-cream.png" loading="lazy" class="gallery-grid" alt="Нарисованный десерт, с живыми шариками мороженого и тарелкой">
-        <img src="./images/tape.png" loading="lazy" class="gallery-grid" alt="Нарисованная магнитофонная касета в окружении компьютерных элементах">
-        <img src="./images/books.png" loading="lazy" class="gallery-grid" alt="Нарисованная стопка книг с чашкой на вершине">
-        <img src="./images/street.png" loading="lazy" class="gallery-grid" alt="Нарисованная в светло-фиолетовых тонах улица">
+        <div class="section__gallery__grid">
+        <img src="./images/sunset.png" loading="lazy" class="gallery-img" alt="Нарисованный закат в море, на фоне гор">
+        <img src="./images/ice-cream.png" loading="lazy" class="gallery-img" alt="Нарисованный десерт, с живыми шариками мороженого и тарелкой">
+        <img src="./images/tape.png" loading="lazy" class="gallery-img" alt="Нарисованная магнитофонная касета в окружении компьютерных элементах">
+        <img src="./images/books.png" loading="lazy" class="gallery-img" alt="Нарисованная стопка книг с чашкой на вершине">
+        <img src="./images/street.png" loading="lazy" class="gallery-img" alt="Нарисованная в светло-фиолетовых тонах улица">
+      </div>
       </section>
     </main>
     <script src="./scripts/script.js"></script>
-    <footer class="footer decorated-zone">
+    <footer class="footer footer__decorated-zone">
       <h2 class="footer__logo">focus</h2>
     </footer>
   </body>
