--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="./images/mobile-icon.png">
     <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css">
-    <link rel="stylesheet" href="./styles/globals.css">
   </head>
   <body class="page">
     <header class="header header__decorated-zone">
@@ -46,8 +46,9 @@
         </ul>
       </nav>
       <h1 class="header__logo">no focus</h1>
-      <div class="header__text"><p class="header__paragraph title-decor">Что делать, когда не можешь делать ничего<br>
-        Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+      <div class="header__text">
+        <p class="header__paragraph title-decor">Что делать, когда не можешь делать ничего</p>
+        <p class="header__paragraph title-decor">Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
       </div>
     </header>
     <main class="content">
@@ -56,7 +57,7 @@
         <article class="section__why__text-block">
           <h3 class="content__subtitle">Многозадачность</h3>
           <p>Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="https://dana.org/article/multicosts-of-multitasking/" class="link-decorated"
-          target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
+          target="_blank" rel="noopener noreferrer">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
         </article>
         <article class="section__why__text-block">  
           <h3 class="content__subtitle">Дофамин</h3>
@@ -82,41 +83,93 @@
         <h2 class="content__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <article class="section__how__text-block">
           <h3 class="content__subtitle">5 простых (на самом деле не очень) советов</h3>
-          <h4 class="content__subtitle-recommendations">Представьте небо и облака</h4>
-          <p>Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
-        </article>
-        <article class="section__how__text-block">
-          <h4 class="content__subtitle-recommendations">Включите музыку</h4>
-          <p>Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
-        </article>
-        <article class="section__how__text-block">
-          <h4 class="content__subtitle-recommendations">Прогуляйтесь</h4>
-          <p>Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" class="link-decorated"
-          target="_blank">показал</a>,, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
-        </article>
-        <article class="section__how__text-block"> 
-          <h4 class="content__subtitle-recommendations">Хорошо ешьте</h4>
-          <p>Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
-        </article>
-        <article class="section__how__text-block"> 
-          <h4 class="content__subtitle-recommendations">Читайте</h4>
-          <p>Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
+          <ul>
+            <li>
+              <h4 class="content__subtitle-recommendations">Представьте небо и облака</h4>
+            </li>
+            <li>  
+              <p>Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <h4 class="content__subtitle-recommendations">Включите музыку</h4>
+            </li>
+            <li>
+              <p>Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <h4 class="content__subtitle-recommendations">Прогуляйтесь</h4>
+            </li>
+            <li>
+              <p>Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" class="link-decorated"
+          target="_blank" rel="noopener noreferrer">показал</a>,, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <h4 class="content__subtitle-recommendations">Хорошо ешьте</h4>
+            </li>
+            <li>
+              <p>Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <h4 class="content__subtitle-recommendations">Читайте</h4>
+            </li>
+            <li>
+              <p>Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
+            </li>
+          </ul>
         </article>
       </section>
       <section class="section__gallery">
-        <h3 class="content__subtitle">А можно в картинках?</h3>
-        <div class="section__gallery__grid">
-        <img src="./images/sunset.png" loading="lazy" class="gallery-img" alt="Нарисованный закат в море, на фоне гор">
-        <img src="./images/ice-cream.png" loading="lazy" class="gallery-img" alt="Нарисованный десерт, с живыми шариками мороженого и тарелкой">
-        <img src="./images/tape.png" loading="lazy" class="gallery-img" alt="Нарисованная магнитофонная касета в окружении компьютерных элементах">
-        <img src="./images/books.png" loading="lazy" class="gallery-img" alt="Нарисованная стопка книг с чашкой на вершине">
-        <img src="./images/street.png" loading="lazy" class="gallery-img" alt="Нарисованная в светло-фиолетовых тонах улица">
-      </div>
+        <h2 class="content__subtitle">А можно в картинках?</h2>
+        <ul class="section__gallery__grid">
+          <li class="gallery-grid-img">
+            <picture>
+              <source srcset="./images/sunset.avif" type="image/avif">
+              <source srcset="./images/sunset.webp" type="image/webp">
+              <img src="./images/sunset.png" loading="lazy" class="gallery-img" alt="Нарисованный закат в море, на фоне гор">
+            </picture>
+          </li>
+          <li class="gallery-grid-img">
+            <picture>
+              <source srcset="./images/ice-cream.avif" type="image/avif">
+              <source srcset="./images/ice-cream.webp" type="image/webp">
+              <img src="./images/ice-cream.png" loading="lazy" class="gallery-img" alt="Нарисованный десерт, с живыми шариками мороженого и тарелкой">
+            </picture>
+          </li>
+          <li class="gallery-grid-img">
+            <picture>
+              <source srcset="./images/tape.avif" type="image/avif">
+              <source srcset="./images/tape.webp" type="image/webp">
+              <img src="./images/tape.png" loading="lazy" class="gallery-img" alt="Нарисованная магнитофонная касета в окружении компьютерных элементах">
+            </picture>
+          </li>
+          <li class="gallery-grid-img">
+            <picture>
+              <source srcset="./images/books.avif" type="image/avif">
+              <source srcset="./images/books.webp" type="image/webp">
+              <img src="./images/books.png" loading="lazy" class="gallery-img" alt="Нарисованная стопка книг с чашкой на вершине">
+            </picture>
+          </li>
+          <li class="gallery-grid-img">
+            <picture>
+              <source srcset="./images/street.avif" type="image/avif">
+              <source srcset="./images/street.webp" type="image/webp">
+              <img src="./images/street.png" loading="lazy" class="gallery-img" alt="Нарисованная в светло-фиолетовых тонах улица">
+            </picture>
+          </li>
+      </ul>
       </section>
     </main>
-    <script src="./scripts/script.js"></script>
     <footer class="footer footer__decorated-zone">
       <h2 class="footer__logo">focus</h2>
     </footer>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
