--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./styles/light.css">
   </head>
   <body class="page">
-    <header class="header header__decorated-zone">
+    <header class="header decorated_zone">
       <span class="header__rec" aria-hidden="true">REC</span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
@@ -187,7 +187,7 @@
       </ul>
       </section>
     </main>
-    <footer class="footer footer__decorated-zone">
+    <footer class="footer decorated_zone">
       <h2 class="footer__logo">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
