--- a/index.html
+++ b/index.html
@@ -47,98 +47,98 @@
       </nav>
       <h1 class="header__logo">no focus</h1>
       <div class="header__text">
-        <p class="header__paragraph title-decor">Что делать, когда не можешь делать ничего</p>
-        <p class="header__paragraph title-decor">Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+        <p class="header__paragraph header__title_decor">Что делать, когда не можешь делать ничего</p>
+        <p class="header__paragraph header__title_decor">Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
       </div>
     </header>
     <main class="content">
-      <section class="section__why">
-        <h2 class="content__title">Почему сосредоточиться так сложно</h2>
-        <ul class="section__why__text-block">
+      <section class="section_why">
+        <h2 class="section_why__title">Почему сосредоточиться так сложно</h2>
+        <ul class="section_why__text_block">
           <li>
-            <h3 class="content__subtitle">Многозадачность</h3>
+            <h3 class="section_why__subtitle">Многозадачность</h3>
           </li>
           <li>  
-            <p>Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="https://dana.org/article/multicosts-of-multitasking/" class="link-decorated"
+            <p>Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="https://dana.org/article/multicosts-of-multitasking/" class="section_why__text_block__link_decorated"
             target="_blank" rel="noopener noreferrer">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
           </li>  
         </ul>
-        <ul class="section__why__text-block">
+        <ul class="section_why__text_block">
           <li>
-            <h3 class="content__subtitle">Дофамин</h3>
+            <h3 class="section_why__subtitle">Дофамин</h3>
           </li>
           <li>
             <p>С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
           </li>  
       </ul>
       </section>
-      <section class="section__what">
-        <h2 class="content__title">Что снижает концентрацию внимания?</h2>
-        <ul class="section__what__text-block">
+      <section class="section_what">
+        <h2 class="section_what__title">Что снижает концентрацию внимания?</h2>
+        <ul class="section_what__text_block">
           <li>
-            <h3 class="content__subtitle">Многозадачность</h3>
+            <h3 class="section_what__subtitle">Многозадачность</h3>
           </li>
           <li>
             <p>Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
           </li>
         </ul>
-        <ul class="section__what__text-block">
+        <ul class="section_what__text_block">
           <li>
-            <h3 class="content__subtitle">Еда</h3>
+            <h3 class="section_what__subtitle">Еда</h3>
           </li>
           <li>
             <p>«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
           </li>
         </ul>
-        <ul class="section__what__text-block">
+        <ul class="section_what__text_block">
           <li>
-            <h3 class="content__subtitle">Гаджеты</h3>
+            <h3 class="section_what__subtitle">Гаджеты</h3>
           </li>
           <li>
             <p>Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
           </li>
         </ul>  
       </section>
-      <section class="section__how">
-        <h2 class="content__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-        <article class="section_how__article__text_block">
-          <h3 class="content__subtitle">5 простых (на самом деле не очень) советов</h3>
-          <ul class="section__how__text-block">
+      <section class="section_how">
+        <h2 class="section_how__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+        <article class="section_how__article">
+          <h3 class="section_how__subtitle">5 простых (на самом деле не очень) советов</h3>
+          <ul class="section_how__text_block">
             <li>
-              <h4 class="content__subtitle-recommendations">Представьте небо и облака</h4>
+              <h4 class="section_how__subtitle_recommendations">Представьте небо и облака</h4>
             </li>
             <li>  
               <p>Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
             </li>
           </ul>
-          <ul class="section__how__text-block">
+          <ul class="section_how__text_block">
             <li>
-              <h4 class="content__subtitle-recommendations">Включите музыку</h4>
+              <h4 class="section_how__subtitle_recommendations">Включите музыку</h4>
             </li>
             <li>
               <p>Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
             </li>
           </ul>
-          <ul class="section__how__text-block">
+          <ul class="section_how__text_block">
             <li>
-              <h4 class="content__subtitle-recommendations">Прогуляйтесь</h4>
+              <h4 class="section_how__subtitle_recommendations">Прогуляйтесь</h4>
             </li>
             <li>
-              <p>Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" class="link-decorated"
+              <p>Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" class="section_how__text_block__link_decorated"
           target="_blank" rel="noopener noreferrer">показал</a>,, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
             </li>
           </ul>
-          <ul class="section__how__text-block">
+          <ul class="section_how__text_block">
             <li>
-              <h4 class="content__subtitle-recommendations">Хорошо ешьте</h4>
+              <h4 class="section_how__subtitle_recommendations">Хорошо ешьте</h4>
             </li>
             <li>
               <p>Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
             </li>
           </ul>
-          <ul class="section__how__text-block">
+          <ul class="section_how__text_block">
             <li>
-              <h4 class="content__subtitle-recommendations">Читайте</h4>
+              <h4 class="section_how__subtitle_recommendations">Читайте</h4>
             </li>
             <li>
               <p>Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
@@ -146,42 +146,42 @@
           </ul>
         </article>
       </section>
-      <section class="section__gallery">
-        <h2 class="content__subtitle">А можно в картинках?</h2>
-        <ul class="section__gallery__grid">
-          <li class="gallery-grid-img">
+      <section class="section_gallery">
+        <h2 class="section_gallery__subtitle">А можно в картинках?</h2>
+        <ul class="section_gallery__grid_list">
+          <li class="section_gallery__grid_item">
             <picture>
               <source srcset="./images/sunset.avif" type="image/avif">
               <source srcset="./images/sunset.webp" type="image/webp">
-              <img src="./images/sunset.png" loading="lazy" class="gallery-img" alt="Нарисованный закат в море, на фоне гор">
+              <img src="./images/sunset.png" loading="lazy" class="section_gallery__img" alt="Нарисованный закат в море, на фоне гор">
             </picture>
           </li>
-          <li class="gallery-grid-img">
+          <li class="section_gallery__grid_item">
             <picture>
               <source srcset="./images/ice-cream.avif" type="image/avif">
               <source srcset="./images/ice-cream.webp" type="image/webp">
-              <img src="./images/ice-cream.png" loading="lazy" class="gallery-img" alt="Нарисованный десерт, с живыми шариками мороженого и тарелкой">
+              <img src="./images/ice-cream.png" loading="lazy" class="section_gallery__img" alt="Нарисованный десерт, с живыми шариками мороженого и тарелкой">
             </picture>
           </li>
-          <li class="gallery-grid-img">
+          <li class="section_gallery__grid_item">
             <picture>
               <source srcset="./images/tape.avif" type="image/avif">
               <source srcset="./images/tape.webp" type="image/webp">
-              <img src="./images/tape.png" loading="lazy" class="gallery-img" alt="Нарисованная магнитофонная касета в окружении компьютерных элементах">
+              <img src="./images/tape.png" loading="lazy" class="section_gallery__img" alt="Нарисованная магнитофонная касета в окружении компьютерных элементах">
             </picture>
           </li>
-          <li class="gallery-grid-img">
+          <li class="section_gallery__grid_item">
             <picture>
               <source srcset="./images/books.avif" type="image/avif">
               <source srcset="./images/books.webp" type="image/webp">
-              <img src="./images/books.png" loading="lazy" class="gallery-img" alt="Нарисованная стопка книг с чашкой на вершине">
+              <img src="./images/books.png" loading="lazy" class="section_gallery__img" alt="Нарисованная стопка книг с чашкой на вершине">
             </picture>
           </li>
-          <li class="gallery-grid-img">
+          <li class="section_gallery__grid_item">
             <picture>
               <source srcset="./images/street.avif" type="image/avif">
               <source srcset="./images/street.webp" type="image/webp">
-              <img src="./images/street.png" loading="lazy" class="gallery-img" alt="Нарисованная в светло-фиолетовых тонах улица">
+              <img src="./images/street.png" loading="lazy" class="section_gallery__img" alt="Нарисованная в светло-фиолетовых тонах улица">
             </picture>
           </li>
       </ul>
