+ fix code rewiew 2

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </section>
       <section class="section_gallery">
         <h2 class="section_gallery__subtitle section__subtitle">А можно в картинках?</h2>
-        <ul class="section_gallery__grid_list section__list__text_block">
+        <ul class="section_gallery__grid_list">
           <li class="section_gallery__grid_item">
             <picture>
               <source srcset="./images/sunset.avif" type="image/avif">
